--- a/src/assets/sass/_general.scss
+++ b/src/assets/sass/_general.scss
@@ -18,11 +18,6 @@ main {
   overflow: clip; // funciona como un hidden pero puedes añadir sticky en los hijos
 }
 
-
-body {
-
-}
-
 footer {
   // El footer siempre pegado abajo
   margin-top: auto;
@@ -47,29 +42,8 @@ footer {
   user-select: none;
 }
 
+//Tipografía
 
-/**
-Cookiebot
- */
-#CybotCookiebotDialogHeader {
-  padding: 1em !important;
-
-  #CybotCookiebotDialogPoweredbyCybot {
-    display: none !important;
-  }
-
-  #CybotCookiebotDialogPoweredbyLink {
-    width:       100% !important;
-    align-items: center !important;
-    justify-content: center;
-
-    #CybotCookiebotDialogPoweredbyImage {
-      max-height: 60px;
-    }
-  }
+.gunterz {
+  font-family: 'Gunterz';
 }
-
-.CookiebotWidget-main-logo {
-  display: none !important;
-}
-
