--- a/src/assets/sass/_variables-theme.scss
+++ b/src/assets/sass/_variables-theme.scss
@@ -2,10 +2,10 @@
 // Las variables que se definan aquí hay que aplicarlas en las variables de bootstrap definidas a continuación
 
 // Configuración fuentes generales
-$cor-font-family-sans-serif:                "Montserrat" !default;
+$cor-font-family-sans-serif:                "Gamilia" !default;
 
 // Configuración fuentes Headings añadidas en _mixins.scss
-$cor-font-family-headings:                  "berlinsans" !default;
+$cor-font-family-headings:                  "Gunterz" !default;
 
 // Espacio para los bloques
 $cor-spacer:                                1rem !default;
@@ -16,22 +16,21 @@ $cor-spacer:                                1rem !default;
 
 // Color corporativo
 
-$cor-primary:                               #f93822 !default;
-$cor-secondary:                             #ffa200 !default;
+$cor-primary:                               #4C7766 !default;
+$cor-secondary:                             #A1C3AE !default;
 
 //Colores oscuros
-$cor-dark:                                  #171616 !default;
-$cor-gray:                                  #bebebe !default; //d6d1ca
-$cor-warm-gray:                             #f5f5f5 !default;
-$cor-light:                                 #e4e2e2 !default;
-$cor-light-yellow:                          #fdd283 !default;
-$cor-light-red:                             #ff5c4a !default;
+$cor-dark:                                  #323232 !default;
+$cor-light:                                 #EBE6E0 !default;
+$cor-gray:                                  #71827b !default; //d6d1ca
+$cor-warm-gray:                             #b7bfbc !default;
+
 //Colores secundarios
 
 // Define la paleta de colores básica
 $cor-black:                                 #000000 !default;
 $cor-white:                                 #FFFFFF !default; // Respetar siempre em blanco puro
-$cor-transparent:                   transparent !default;
+$cor-transparent:                           transparent !default;
 
 // Configuración colores del body
 $cor-body-color:                            $cor-dark;
@@ -82,12 +81,12 @@ $cor-headings-font-weight:                  600;
 $cor-headings-font-weight-light:            500;
 
 // Headings y .fs-*
-$cor-h1-font-size:                          $cor-font-size-base-text * toRem(55) !default;
-$cor-h2-font-size:                          $cor-font-size-base-text * toRem(44) !default;
-$cor-h3-font-size:                          $cor-font-size-base-text * toRem(35) !default;
-$cor-h4-font-size:                          $cor-font-size-base-text * toRem(28) !default;
-$cor-h5-font-size:                          $cor-font-size-base-text * toRem(23) !default;
-$cor-h6-font-size:                          $cor-font-size-base-text * toRem(16) !default; //Body
+$cor-h1-font-size:                          $cor-font-size-base-text * toRem(61) !default;
+$cor-h2-font-size:                          $cor-font-size-base-text * toRem(49) !default;
+$cor-h3-font-size:                          $cor-font-size-base-text * toRem(39) !default;
+$cor-h4-font-size:                          $cor-font-size-base-text * toRem(31) !default;
+$cor-h5-font-size:                          $cor-font-size-base-text * toRem(25) !default;
+$cor-h6-font-size:                          $cor-font-size-base-text * toRem(20) !default; //Body
 
 // Configuraciones altura de linea añadidas en _mixins.scss
 $cor-h1-line-height:                        1.10 !default;
@@ -106,12 +105,12 @@ $cor-h5-letter-spacing:                     normal !default;
 $cor-h6-letter-spacing:                     normal !default;
 
 // Configuración Headings  a partir de md añadidas en _utils.scss
-$cor-h1-font-size-md:                       $cor-font-size-base-text * toRem(55) !default;
-$cor-h2-font-size-md:                       $cor-font-size-base-text * toRem(44) !default;
-$cor-h3-font-size-md:                       $cor-font-size-base-text * toRem(35) !default;
-$cor-h4-font-size-md:                       $cor-font-size-base-text * toRem(28) !default;
-$cor-h5-font-size-md:                       $cor-font-size-base-text * toRem(23) !default;
-$cor-h6-font-size-md:                       $cor-font-size-base-text * toRem(16) !default;
+$cor-h1-font-size-md:                       $cor-font-size-base-text * toRem(61) !default;
+$cor-h2-font-size-md:                       $cor-font-size-base-text * toRem(49) !default;
+$cor-h3-font-size-md:                       $cor-font-size-base-text * toRem(39) !default;
+$cor-h4-font-size-md:                       $cor-font-size-base-text * toRem(31) !default;
+$cor-h5-font-size-md:                       $cor-font-size-base-text * toRem(25) !default;
+$cor-h6-font-size-md:                       $cor-font-size-base-text * toRem(20) !default;
 
 // Configuración fuentes a partir de md .fs-1 .fs-2 y fs-md-1 que corresponde a los tamaños de los encabezados pero para textos añadidas en _utils.css
 $cor-font-size-base-1-md:                   $cor-h1-font-size-md;
@@ -234,7 +233,7 @@ $cor-dropdown-item-padding-x:               $cor-spacer * 1 !default;
 $cor-nav-link-font-weight:                  400 !default;
 $cor-nav-link-padding-y:                    .5rem !default;
 $cor-nav-link-padding-x:                    1rem !default;
-$cor-nav-link-font-size:                    $cor-font-size-base-text * toRem(12) !default;
+$cor-nav-link-font-size:                    $cor-font-size-base-text * toRem(16) !default;
 $cor-nav-link-color:                        $cor-black !default;
 $cor-nav-link-hover-color:                  rgba($cor-black, .5) !default;
 
