scss files deleted, first components and home page

--- a/src/assets/sass/_fonts.scss
+++ b/src/assets/sass/_fonts.scss
@@ -4,12 +4,14 @@
   font-weight: 900; /* Black */
   font-style: normal;
 }
-@font-face {
-  font-family: 'Gunterz';
-  src: url('../fonts/Gunterz-BlackItalic.ttf') format('truetype');
-  font-weight: 900; /* Black */
-  font-style: normal;
-}
+
+// @font-face {
+//   font-family: 'Gunterz';
+//   src: url('../fonts/Gunterz-BlackItalic.ttf') format('truetype');
+//   font-weight: 900; /* Black */
+//   font-style: normal;
+// }
+
 @font-face {
   font-family: 'Gunterz';
   src: url('../fonts/Gunterz-Bold.ttf') format('truetype');
@@ -17,12 +19,13 @@
   font-style: normal;
 }
 
-@font-face {
-  font-family: 'Gunterz';
-  src: url('../fonts/Gunterz-BoldItalic.ttf') format('truetype');
-  font-weight: 700; /* Bold */
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'Gunterz';
+//   src: url('../fonts/Gunterz-BoldItalic.ttf') format('truetype');
+//   font-weight: 700; /* Bold */
+//   font-style: normal;
+// }
+
 @font-face {
   font-family: 'Gunterz';
   src: url('../fonts/Gunterz-Medium.ttf') format('truetype');
@@ -30,12 +33,12 @@
   font-style: normal;
 }
 
-@font-face {
-  font-family: 'Gunterz';
-  src: url('../fonts/Gunterz-MediumItalic.ttf') format('truetype');
-  font-weight: 500; /* Light */
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'Gunterz';
+//   src: url('../fonts/Gunterz-MediumItalic.ttf') format('truetype');
+//   font-weight: 500; /* Light */
+//   font-style: normal;
+// }
 
 @font-face {
   font-family: 'Gunterz';
@@ -44,12 +47,12 @@
   font-style: normal;
 }
 
-@font-face {
-  font-family: 'Gunterz';
-  src: url('../fonts/Gunterz-Italic.ttf') format('truetype');
-  font-weight: 300; /* Semibold */
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'Gunterz';
+//   src: url('../fonts/Gunterz-Italic.ttf') format('truetype');
+//   font-weight: 300; /* Semibold */
+//   font-style: normal;
+// }
 
 @font-face {
   font-family: 'Gamilia';
@@ -58,10 +61,10 @@
   font-style: normal;
 }
 
-@font-face {
-  font-family: 'Gamilia';
-  src: url('../fonts/Gamilia-Italic.ttf') format('opentype');
-  font-weight: 300; /* 400 */
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'Gamilia';
+//   src: url('../fonts/Gamilia-Italic.ttf') format('opentype');
+//   font-weight: 300; /* 400 */
+//   font-style: normal;
+// }
 
