--- a/src/assets/sass/_utils.scss
+++ b/src/assets/sass/_utils.scss
@@ -2,41 +2,42 @@
 
 :root {
   // usar la clase bg-image y llamar a este root en el style para añadir la imagen
-  --bg-image:      "";
-  --bg-md-image:   "";
-  --bg-porcentaje: 0.3;
+  --bg-image: "";
+  --bg-md-image: "";
+  --bg-porcentaje: 0.4;
 }
 
 /*  Configuración fuentes Desktop */
 
 $display-font-sizes-md: (
-                                1: $cor-display-font-sizes-1-md,
-                                2: $cor-display-font-sizes-2-md,
-                                3: $cor-display-font-sizes-3-md,
-                                4: $cor-display-font-sizes-4-md,
-                                5: $cor-display-font-sizes-5-md,
-                                6: $cor-display-font-sizes-6-md,
-                        );
-$headings-sizes-md:     (
-                                1: $cor-h1-font-size-md,
-                                2: $cor-h2-font-size-md,
-                                3: $cor-h3-font-size-md,
-                                4: $cor-h4-font-size-md,
-                                5: $cor-h5-font-size-md,
-                                6: $cor-h6-font-size-md
-                        );
-$font-sizes-md:         (
-                                1: $cor-font-size-base-1-md,
-                                2: $cor-font-size-base-2-md,
-                                3: $cor-font-size-base-3-md,
-                                4: $cor-font-size-base-4-md,
-                                5: $cor-font-size-base-5-md,
-                                6: $cor-font-size-base-6-md,
-                        );
+  1: $cor-display-font-sizes-1-md,
+  2: $cor-display-font-sizes-2-md,
+  3: $cor-display-font-sizes-3-md,
+  4: $cor-display-font-sizes-4-md,
+  5: $cor-display-font-sizes-5-md,
+  6: $cor-display-font-sizes-6-md,
+);
+$headings-sizes-md: (
+  1: $cor-h1-font-size-md,
+  2: $cor-h2-font-size-md,
+  3: $cor-h3-font-size-md,
+  4: $cor-h4-font-size-md,
+  5: $cor-h5-font-size-md,
+  6: $cor-h6-font-size-md
+);
+$font-sizes-md: (
+  1: $cor-font-size-base-1-md,
+  2: $cor-font-size-base-2-md,
+  3: $cor-font-size-base-3-md,
+  4: $cor-font-size-base-4-md,
+  5: $cor-font-size-base-5-md,
+  6: $cor-font-size-base-6-md,
+);
 
 @each $size, $value in $display-font-sizes-md {
   .display-#{$size} {
     font-family: $cor-font-family-headings;
+
     @include media-breakpoint-up(md) {
       font-size: $value !important;
     }
@@ -44,14 +45,18 @@ $font-sizes-md:         (
 }
 
 @each $size, $value in $font-sizes {
-  .h#{$size}, h#{$size} {
+
+  .h#{$size},
+  h#{$size} {
     @include title($size);
     font-size: $value;
   }
 }
 
 @each $size, $value in $headings-sizes-md {
-  .h#{$size}, h#{$size} {
+
+  .h#{$size},
+  h#{$size} {
     @include media-breakpoint-up(md) {
       font-size: $value;
     }
@@ -60,6 +65,8 @@ $font-sizes-md:         (
 
 @each $size, $value in $font-sizes-md {
   .fs-#{$size} {
+    font-family: $cor-font-family-sans-serif;
+
     @include media-breakpoint-up(md) {
       font-size: $value !important;
     }
@@ -76,8 +83,10 @@ $font-sizes-md:         (
 
 @each $size, $value in $font-sizes-md {
   .fs-md-#{$size} {
+    font-family: $cor-font-family-sans-serif;
+
     @include media-breakpoint-up(md) {
-      font-size:      $value !important;
+      font-size: $value !important;
       text-transform: initial;
     }
   }
@@ -91,6 +100,7 @@ $font-sizes-md:         (
 
 .legend {
   font-size: $cor-font-legend !important;
+
   @include media-breakpoint-up(md) {
     font-size: $cor-font-legend-md !important;
   }
@@ -104,13 +114,27 @@ $font-sizes-md:         (
 
 .tag {
   font-size: $cor-font-tag !important;
+
   @include media-breakpoint-up(md) {
     font-size: $cor-font-tag-md !important;
   }
 }
 
+.fw-regular {
+  font-weight: 400;
+}
+
+.gunterz {
+  font-family: 'Gunterz';
+}
+
+
 .object-fit-contain {
   object-fit: contain;
+}
+
+.object-fit-cover {
+  object-fit: cover;
 }
 
 .bg-image {
@@ -134,11 +158,6 @@ $font-sizes-md:         (
 }
 
 .h-view {
-  height:   100vh;
-  overflow: clip
-}
-
-.h-100-view {
   height: 100vh;
   overflow: clip
 }
@@ -147,13 +166,14 @@ $font-sizes-md:         (
   height: 95vh;
   overflow: clip
 }
+
 .h-80-view {
-  height:   80vh;
+  height: 80vh;
   overflow: clip
 }
 
 .vh-50 {
-  height:   50vh;
+  height: 50vh;
   overflow: clip
 }
 
@@ -162,30 +182,6 @@ $font-sizes-md:         (
   overflow: clip
 }
 
-.montserrat {
-  font-family: 'Montserrat', sans-serif;
-}
-
-// Restar medida padding a las columnas
-.p-md-ini {
-  @include media-breakpoint-up(md) {
-    padding: 0 $container-padding-x * .5 !important;
-  }
-}
-
-.px-md-ini {
-  @include media-breakpoint-up(md) {
-    padding-left:  $container-padding-x * .5 !important;
-    padding-right: $container-padding-x * .5 !important;
-  }
-}
-
-.px-lg-ini {
-  @include media-breakpoint-up(lg) {
-    padding-left:  $container-padding-x * .5 !important;
-    padding-right: $container-padding-x * .5 !important;
-  }
-}
 
 .py-hero {
   padding-bottom: toRem(24)*1rem;
@@ -217,8 +213,8 @@ $font-sizes-md:         (
 
 .sticky-top-header {
   position: sticky;
-  top:      calc(toRem(78) * 1rem + $spacer * .5);
-  z-index:  1019;
+  top: calc(toRem(78) * 1rem + $spacer * .5);
+  z-index: 1019;
 }
 
 .overwhite,
@@ -227,15 +223,16 @@ $font-sizes-md:         (
   overflow: clip;
 
   &:before {
-    content:    "";
-    position:   absolute;
-    top:        0;
-    right:      0;
-    bottom:     0;
-    left:       0;
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     background: rgba(0, 0, 0, var(--bg-porcentaje));
-    z-index:    0; /* Asegúrate de que esté entre el video y el contenido */
-    height:     100%;
+    z-index: 0;
+    /* Asegúrate de que esté entre el video y el contenido */
+    height: 100%;
   }
 
   * {
@@ -247,4 +244,17 @@ $font-sizes-md:         (
   &:before {
     background: rgba(255, 255, 255, var(--bg-porcentaje));
   }
+}
+
+.blur {
+
+  filter: blur(4px); 
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  z-index: -1; 
 }
