--- a/src/assets/sass/animations/_cursor.scss
+++ b/src/assets/sass/animations/_cursor.scss
@@ -1,11 +1,23 @@
 .circle {
-    height: 24px;
-    width: 24px;
-    border-radius: 24px;
-    background-color: black;
-    position: fixed; 
-    top: 0;
-    left: 0;
-    pointer-events: none;
-    z-index: 99999999; /* so that it stays on top of all other elements */
-  }
+  height: 24px;
+  width: 24px;
+  border-radius: 24px;
+  background-color: black;
+  position: fixed; 
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  z-index: 1031; /* so that it stays on top of all other elements */
+
+  &:hover {
+    .circle {
+      height: 55px;
+      width: 55px;
+    }
+}
+}
+
+.custom-cursor-container {
+  cursor: none;
+  z-index: 10302;
+}
