--- a/src/assets/sass/partials/_swiper.scss
+++ b/src/assets/sass/partials/_swiper.scss
@@ -1,131 +1,5 @@
-.swiper-proyectos-relacionados,
-.section-swiper-productos,
-.swiper-galeria,
-.swiper-modelos {
-  @include media-breakpoint-up(md) {
-    .swiper-pagination {
-      top:    unset;
-      bottom: 0;
-      background-color: transparent;
-
-      .swiper-pagination-progressbar-fill {
-        background-color: $cor-gray
-      }
-    }
-  }
+.swiper-images {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
 }
-
-.swiper-card-profesionales,
-.swiper-galeria,
-.swiper-proyectos-relacionados,
-.swiper-productos,
-{
-  @include media-breakpoint-down(md) {
-    .swiper-button-next,
-    .swiper-button-prev {
-      top:           unset;
-      bottom:        -40;
-      background-color: $cor-gray;
-      border-radius: 50%;
-      aspect-ratio:  1;
-      height:        var(--swiper-navigation-size);
-      width:         var(--swiper-navigation-size);
-
-      &:after {
-        @include icon-style();
-        width:            1.5rem;
-        height:           1.5rem;
-        //top: 0.1rem;
-        $cor-color-icons-svg: $cor-color-icons-svg-black;
-        background-image: url('data:image/svg+xml;utf8,<svg width="15" height="20" viewBox="0 0 15 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.7033 10.635L0.0382814 19.385V16.76L11.2383 9.935L0.0382814 3.075V0.52L14.7033 9.34V10.635Z" fill="#{$cor-color-icons-svg}"/></svg> ');
-      }
-    }
-
-    .swiper-button-prev {
-      left:  unset;
-      right: var(--swiper-navigation-sides-offset, 60px);
-      transform: rotate(180deg);
-    }
-  }
-}
-
-.swiper-modal {
-  @include media-breakpoint-up(md) {
-
-    .swiper-button-next,
-    .swiper-button-prev {
-      color: $cor-gray;
-      /*background-color: $cor-black;
-      border-radius: 50%;
-      aspect-ratio:  1;*/
-      height: var(--swiper-navigation-size);
-      width: var(--swiper-navigation-size);
-
-
-    }
-  }
-
-
-}
-
-
-.swiper-clientes {
-  .swiper-wrapper {
-    transition-timing-function: linear;
-  }
-}
-
-.swiper-proyectos {
-  &.swiper {
-    width: 100%;
-    height: 100%;
-  }
-
-  .swiper-slide {
-    text-align:  center;
-    font-size:   18px;
-    background:  #fff;
-    display:     flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .swiper-slide img {
-    display: block;
-    width:   100%;
-    height:  100%;
-    object-fit: cover;
-  }
-}
-
-
-.swiper-modelos {
-  .swiper-wrapper {
-    @include media-breakpoint-down(md) {
-      display: block !important;
-    }
-  }
-
-  .swiper-slide {
-    @include media-breakpoint-down(md) {
-      width: 100%;
-      margin-right: 0;
-    }
-  }
-}
-
-
-.custom-swiper-slide {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.custom-swiper-slide img {
-  max-width: 100%;
-  max-height: 80vh;
-  object-fit: contain;
-}
-
-
-
