--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -37,6 +37,7 @@
 @import "partials/social";
 @import "partials/swiper";
 @import "partials/aspect-ratios";
+@import "partials/portfolio-page";
 
 // blocks
 //@import "blocks/news";
