smooth scroll lenis

--- a/src/assets/sass/_general.scss
+++ b/src/assets/sass/_general.scss
@@ -1,5 +1,9 @@
-body {
 
+html{
+  scroll-behavior: auto !important;
+}
+body {
+  
   cursor:none !important;
   // El footer siempre pegado abajo
   display:    flex;
