animation styles imported

--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -37,7 +37,6 @@
 @import "partials/social";
 @import "partials/swiper";
 @import "partials/aspect-ratios";
-@import "partials/portfolio-page";
 
 // blocks
 //@import "blocks/news";
@@ -45,4 +44,7 @@
 // Animaciones
 @import "animations/cursor";
 @import "animations/text";
+@import "animations/scroll";
+@import "animations/3d-animation";
+@import "animations/parallax";
 
