--- a/src/assets/sass/_utils.scss
+++ b/src/assets/sass/_utils.scss
@@ -271,3 +271,18 @@ $font-sizes-md: (
   background-position: center;
   z-index: -1;
 }
+
+
+header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  background: transparent; /* Transparecia si lo deseas */
+  transition: all 0.3s ease-in-out; /* Transición suave */
+}
+
+header.inverted {
+  filter: invert(1);
+  mix-blend-mode: difference;
+}
