changed top for bottom

--- a/src/assets/sass/overrides/_buttons.scss
+++ b/src/assets/sass/overrides/_buttons.scss
@@ -75,7 +75,7 @@
 
 .centered-button {
   position: absolute;
-  top: 30px;
+  bottom: 30px;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 10;
