--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -40,4 +40,5 @@
 @import "animations/3d-animation";
 @import "animations/parallax";
 @import "animations/carousel";
+@import "animations/gallery";
 
