--- a/src/assets/sass/overrides/_buttons.scss
+++ b/src/assets/sass/overrides/_buttons.scss
@@ -80,3 +80,11 @@
   transform: translate(-50%, -50%);
   z-index: 10;
 }
+
+.bottom-fixed-button {
+  position: fixed;
+  bottom: -15px;
+  left: 94%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
+}
