--- a/src/assets/sass/animations/_gallery.scss
+++ b/src/assets/sass/animations/_gallery.scss
@@ -5,18 +5,17 @@
   position: relative;
 }
 
+.images-gallery {
+  transition: all 0.3s ease; /* Añadir transición suave */
+}
+
 .gallery {
-  width: 180vw;
-  height: 380vh;
+  width: 120vw;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   transition: transform 2s cubic-bezier(0.075, 0.82, 0.165, 1);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 10rem;
 }
 
 .gallery-row {
@@ -52,4 +51,71 @@
 
 .item:hover .gallery-img {
   opacity: 1;
+}
+
+.animated-image-card {
+  transition: all 0.5s ease; /* Aplicamos transición a todas las propiedades que cambien */
+}
+
+.gallery-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.project-details {
+  padding-top: 80px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; /* Puedes usar center o space-between también */
+  gap: 40px; /* Espacio entre imágenes */
+  padding: 10px;
+  max-width: 869px;
+}
+
+.animated-image-card {
+  width: 200px;
+  height: 200px;
+  margin-bottom: 10px;
+}
+
+#change-btn {
+  position: fixed;
+  bottom: 30px;
+}
+
+#refdiv {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.gallery-grid {
+  display: grid;
+  gap: 80px;
+  justify-content: center;
+  align-items: center;
+}
+
+.gallery-grid.ordered {
+  grid-template-columns: repeat(
+    5,
+    1fr
+  ); /* Cambia el layout cuando se activa el estado "ordered" */
+}
+
+.gallery-grid.ordered .gallery-item{
+  height:200px !important;
+  width: 200px !important;
+}
+
+.gallery-grid.ordered .gallery-item img{
+  transform: translateY(0) !important;
+  scale: 1 !important;
+}
+
+.gallery-item {
+  background-color: #f0f0f0;
 }
