--- a/src/components/Detail/Detail.scss
+++ b/src/components/Detail/Detail.scss
@@ -5,15 +5,16 @@
   gap: 20px;
   padding: 20px;
   height: 100vh;
+  position: absolute;
+  top: 0;
 }
 
 .main-image-container {
-  width: 300px;
+  width: auto;
   height: 500px;
   display: flex;
   overflow: hidden;
   border-radius: 10px;
-  background-color: #000;
   z-index: 2;
 }
 
@@ -25,7 +26,7 @@
 
 .thumbnails-container {
   display: flex;
-  justify-content: center;
+  // justify-content: center;
   gap: 10px;
   overflow-x: scroll;
   padding: 10px 0;
@@ -63,12 +64,6 @@
   display: none;
 }
 
-.thumbnails-container {
-  display: flex;
-  gap: 10px;
-  padding: 10px 0;
-}
-
 .thumbnail-card {
   flex: 0 0 auto;
 }
@@ -79,11 +74,12 @@
 }
 
 .background-overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
+  right: 0;
+  bottom: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 1);
-  z-index: 1;
+  animation: overlayShow .15s cubic-bezier(.16,1,.3,1);
+  z-index: 10000;
 }
+
