--- a/src/assets/sass/_variables-theme.scss
+++ b/src/assets/sass/_variables-theme.scss
@@ -16,8 +16,8 @@ $cor-spacer:                                1rem !default;
 
 // Color corporativo
 
-$cor-primary:                               #4C7766 !default;
-$cor-secondary:                             #A1C3AE !default;
+$cor-primary:                               #341116 !default;
+$cor-secondary:                             #DA6A2D !default;
 
 //Colores oscuros
 $cor-dark:                                  #323232 !default;
