--- a/src/components/Detail/Detail.scss
+++ b/src/components/Detail/Detail.scss
@@ -73,13 +73,23 @@
   border: 2px solid #fff;
 }
 
+.gallery-container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index:1000;
+}
+
 .background-overlay {
   position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  animation: overlayShow .15s cubic-bezier(.16,1,.3,1);
-  z-index: 10000;
+  height: 100vh;
+  width: 100vw;
+  // z-index: 10000;
 }
 
