added infinte carrusel  and scss

--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -32,6 +32,7 @@
 
 // Pages
 @import "pages/portfolio-details-page/images";
+@import "pages/footer/infinite-carrusel";
 
 // Animaciones
 @import "animations/cursor";
@@ -41,4 +42,5 @@
 @import "animations/parallax";
 @import "animations/carousel";
 @import "animations/gallery";
+@import "animations/detail";
 
