--- a/src/assets/sass/base/_fonts.scss
+++ b/src/assets/sass/base/_fonts.scss
@@ -4,27 +4,12 @@
   font-weight: 900; /* Black */
   font-style: normal;
 }
-
-// @font-face {
-//   font-family: 'Gunterz';
-//   src: url('../fonts/Gunterz-BlackItalic.ttf') format('truetype');
-//   font-weight: 900; /* Black */
-//   font-style: normal;
-// }
-
 @font-face {
   font-family: 'Gunterz';
   src: url('../fonts/Gunterz-Bold.ttf') format('truetype');
   font-weight: 700; /* Bold */
   font-style: normal;
 }
-
-// @font-face {
-//   font-family: 'Gunterz';
-//   src: url('../fonts/Gunterz-BoldItalic.ttf') format('truetype');
-//   font-weight: 700; /* Bold */
-//   font-style: normal;
-// }
 
 @font-face {
   font-family: 'Gunterz';
@@ -33,26 +18,12 @@
   font-style: normal;
 }
 
-// @font-face {
-//   font-family: 'Gunterz';
-//   src: url('../fonts/Gunterz-MediumItalic.ttf') format('truetype');
-//   font-weight: 500; /* Light */
-//   font-style: normal;
-// }
-
 @font-face {
   font-family: 'Gunterz';
   src: url('../fonts/Gunterz-Regular.ttf') format('truetype');
   font-weight: 400; /* Regular */
   font-style: normal;
 }
-
-// @font-face {
-//   font-family: 'Gunterz';
-//   src: url('../fonts/Gunterz-Italic.ttf') format('truetype');
-//   font-weight: 300; /* Semibold */
-//   font-style: normal;
-// }
 
 @font-face {
   font-family: 'Gamilia';
@@ -61,10 +32,8 @@
   font-style: normal;
 }
 
-// @font-face {
-//   font-family: 'Gamilia';
-//   src: url('../fonts/Gamilia-Italic.ttf') format('opentype');
-//   font-weight: 300; /* 400 */
-//   font-style: normal;
-// }
-
+.h-jumbo{
+font-size: 95px;
+font-family: Gunterz;
+font-weight: 700;
+}
