--- a/src/assets/sass/pages/footer/_infinite-carrusel.scss
+++ b/src/assets/sass/pages/footer/_infinite-carrusel.scss
@@ -5,47 +5,49 @@
     padding-top: 120px;
     color: $cor-secondary;
 
+    /* Pausa la animación y cambia el color del texto y logo en hover */
     &:hover .text-banner-item {
         animation-play-state: paused;
-        color: $cor-light;
+        color: $cor-light; /* Cambia el color del texto */
+    }
+
+    &:hover .text-banner-item .svg-logo {
+        background-color: $cor-light; /* Cambia el color del logo */
     }
 }
 
 .text-banner-item {
-    display: flex; /* Flexbox to align content (text or logo) */
-    align-items: center; /* Vertically center the text/logo */
+    display: flex;
     justify-content: center;
     white-space: nowrap;
     animation: move-rtl 6000ms linear infinite;
     animation-play-state: running;
     transition: color 0.3s ease;
-}
 
+    div {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: auto;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        overflow: visible;
+        line-height: 0.9;
+    }
 
-.text-banner-item  div {
-    display: flex; /* Flexbox to align content (text or logo) */
-    align-items: center; /* Vertically center the text/logo */
-    justify-content: center;
-    height: auto;
-    margin: 0 auto;
-    margin: 0;     /* Elimina márgenes extra */
-     padding: 0; 
-     display: block;
-     box-sizing: border-box;
-     overflow: visible; 
-     line-height: 0.9;
-}
-
-
-.text-banner-item  p {
- 
-}
-
-/* Style for SVG logo */
-.text-banner-item img {
-    width: 75px;  /* Set logo size */
-    height: 75px;
-    margin: 0 2rem;
+    /* Aplica el SVG como una máscara de imagen */
+    .svg-logo {
+        width: 75px;
+        height: 75px;
+        margin: 0 2rem;
+        background-color: $cor-secondary; /* Color inicial del logo */
+        mask-image: url('/logo-dark.svg'); /* Aplica el SVG como máscara */
+        mask-size: contain;
+        mask-repeat: no-repeat;
+        mask-position: center;
+        transition: background-color 0.3s ease;
+    }
 }
 
 @keyframes move-rtl {
