--- a/src/assets/sass/animations/_detail.scss
+++ b/src/assets/sass/animations/_detail.scss
@@ -80,7 +80,7 @@
     right: 0;
     height: 100vh;
     width: 100vw;
-    z-index:1000;
+    z-index:10000;
   }
   
   .background-overlay {
@@ -91,10 +91,28 @@
     left: 0;
     height: 100vh;
     width: 100vw;
-    // z-index: 10000;
   }
   
   .detail-mode{
   overflow: hidden;
   max-height: 100vh;
+
   }
+
+  .close-overlay-button {
+    position: absolute;
+    top: 20px; 
+    right: 20px; 
+    background: none;
+    border: none;
+    font-size: 3rem;
+    color: black;
+    cursor: pointer;
+    z-index: 10; 
+  }
+  
+  .close-overlay-button:hover {
+    color: red; /* Change color on hover */
+  }
+
+  
