bootstrap to bem

--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -16,6 +16,7 @@
 
 // Utilidades extra estilo bootstrap
 @import 'base/general';
+@import 'base/text';
 
 // Plugins
 //@import "node_modules/bootstrap-select/sass/bootstrap-select";
