--- a/src/assets/sass/overrides/_navs.scss
+++ b/src/assets/sass/overrides/_navs.scss
@@ -1,32 +1,41 @@
-.navbar-container {
-  position: relative;
-  text-transform: uppercase;
-  font-family: 'gunterz', sans-serif; // Asegúrate de que el nombre de la fuente esté correctamente especificado
-}
-
-.navbar-brand-centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
 .navbar {
-  transition: transform 1.2s ease-in-out, opacity 1.2s ease-in-out; 
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+  transition: transform 1.2s ease-in-out, opacity 1.2s ease-in-out;
   transform: translateY(0%);
   opacity: 1;
   pointer-events: all;
   z-index: -1;
-}
 
-.hide {
-  transform: translateY(-100%);
-  opacity: 0;
-  pointer-events: none; 
-}
+  &--container {
+    position: relative;
+    text-transform: uppercase;
+    font-family: 'gunterz', sans-serif; // Asegúrate de que el nombre de la fuente esté correctamente especificado
+  }
 
+  &--brand-centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 
-.header-hide{
-  transition: z-index 0s linear 1.5s; // Retrasa el cambio de z-index hasta después de la transición
-  z-index: -100; // Este z-index solo se aplica cuando el navbar se oculta
+  &--expand-lg {
+    @media (min-width: 992px) {
+      flex-wrap: nowrap;
+      justify-content: flex-start;
+    }
+  }
+
+  // Estilos claros (equivalente a "navbar-light")
+  &--light {
+    color: $cor-dark;
+
+    .navbar-brand {
+      color: inherit;
+    }
+  }
 }
