--- a/src/assets/sass/overrides/_buttons.scss
+++ b/src/assets/sass/overrides/_buttons.scss
@@ -1,79 +1,4 @@
-//Animación
-//https://www.cssscript.com/button-ripple-effect-on-click/
-
-.btn {
-  &:not(.btn-lg, .btn-sm, .btn-blog) {
-    @include media-breakpoint-up(md) {
-      @include button-size($cor-btn-md-padding-y, $cor-btn-md-padding-x, $cor-btn-font-size-md, $cor-btn-border-radius);
-    }
-  }
-
-  /*&.btn-nav{
-    @include media-breakpoint-down(md) {
-      @include button-variant($cor-primary, $cor-primary);
-      @include button-size($spacer * .9, $spacer * 1.5, $cor-btn-font-size, $cor-btn-border-radius);
-    }
-  }*/
-}
-
-.dropdown .btn-drop {
-  @include button-variant($cor-gray, $cor-gray);
-  @include button-size($spacer * .9, $spacer * 1.5, $cor-btn-font-size, $cor-btn-border-radius);
-  @include media-breakpoint-up(md) {
-    min-width: $cor-dropdown-min-width;
-  }
-}
-
-.btn {
-  &.btn-white {
-    @include button-variant($cor-white, $cor-black, $cor-secondary, rgba($cor-gray, .8), $cor-secondary, $cor-black);
-
-    &.activo {
-      @include button-variant($cor-gray, $cor-black, $cor-secondary, rgba($cor-gray, .8), $cor-secondary, $cor-black);
-
-    }
-  }
-  &.btn-primary {
-    @include button-variant($cor-primary, $cor-primary, $cor-white, $cor-primary, $cor-dark, $cor-dark);
-  }
-  &.btn-secondary {
-    @include button-variant($cor-secondary, $cor-secondary, $cor-dark, $cor-primary, $cor-dark, $cor-black);
-  }
-
-  &.button-configurador {
-    @include button-variant($cor-transparent, $cor-black, $cor-secondary, rgba($cor-primary, .8), $cor-secondary, $cor-black);
-
-    &.activo {
-      @include button-variant($cor-primary, $cor-black, $cor-secondary, rgba($cor-primary, .8), $cor-secondary, $cor-black);
-
-    }
-  }
-
-  &.btn-sticky {
-    @include button-variant($cor-black, $cor-black, $cor-primary, rgba($cor-black, .8), rgba($cor-black, .8), $cor-primary);
-    position: fixed;
-    top:      50vh;
-    transform: translate(0, -50%);
-    right:    calc(1.5rem * 0.5);
-    z-index:  100;
-  }
-
-  @media (max-width: 768px) {
-    &.btn-sticky {
-      top: auto !important;
-      bottom: 10vh !important;
-      right: calc(1.5rem * 0.5) !important;
-      transform: none !important;
-    }
-  }
-
-  &.btn-home-page{
-    @include button-variant($cor-transparent, $cor-transparent, $cor-light, $cor-transparent, $cor-transparent, $cor-black);
-   
-  }
-}
-
-.centered-button {
+.button--centered {
   position: absolute;
   bottom: 30px;
   left: 50%;
@@ -81,7 +6,7 @@
   z-index: 10;
 }
 
-.bottom-fixed-button {
+.button--fixed-bottom {
   position: fixed;
   bottom: -15px;
   left: 94%;
