--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -8,11 +8,11 @@
 // Funciones para SASS
 @import "abstracts/functions";
 // Variables generales y overrides de las de bootstrap
-@import "bootstrap-variables";
+@import "abstracts/variables";
 @import "abstracts/mixins";
 
 // Para especificar las clases de Bootstrap que queremos cargar
-@import "bootstrap-loads";
+// @import "bootstrap-loads";
 
 // Utilidades extra estilo bootstrap
 @import 'base/general';
